Evaluator improved for Busybox